--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       href="/path/to/bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css"
     />
-    <title>В ПУТЬ</title>
+    <title>СТАЖЁРАМ И ПРАКТИКАНТАМ</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
